--- a/css/index.css
+++ b/css/index.css
@@ -127,3 +127,19 @@ body {
     background-color: #fff;
     padding: 40px;
 }
+.name-div {
+    text-align: center;
+    padding: 20px 20px 20px 20px;
+}
+.box-2 {
+    padding: 0px 50px;
+    margin-top: 30px;
+}
+.p2 {
+    font-size: 20px;
+    font-weight: 300px;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+    line-height: 18px;
+    margin-top: 5px;
+}
