--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
     box-sizing: border-box;
     font-family: 'Libre Franklin', sans-serif;
 }
-.body {
+body {
 
     background-color: lightblue;
     display: flex;
